--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint",
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
+    "db:setup": "prisma db push",
     "postinstall": "prisma generate"
   },
   "dependencies": {
